iou-app/objects/Declarative_Automation__c/Declarative_Automation__c.object-meta.xml
<CustomObject>
    <description>Similar to Apex Methods, Declarative Automation records store excavated logic that can be validated and remodeled. Some declarative automations will move to Apex, others may move to (or stay in) Flow.</description>
    <label>Declarative Automation</label>
    <nameField>
        <label>Declarative Automation  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Declarative Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>