iou-app/objects/Declarative_Automation__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Validation usually stalls because an answer needs to be found. Sometimes the internal team can answer, other times external input is required.</description>
    <label>Blocked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Team Review</fullName>
            </value>
            <value>
                <fullName>Needs External Review</fullName>
            </value>
            <value>
                <fullName>Needs Break/Fix Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>