iou-app/objects/Declarative_Automation__c/fields/Future_Refactoring__c.field-meta.xml
<CustomField>
    <fullName>Future_Refactoring__c</fullName>
    <description>Typically, this section is used to identify where the Declarative Automation logic will be refactored to. This could be a new Apex Method or it could be a Flow.</description>
    <label>Future Refactoring</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>