iou-app/objects/Declarative_Automation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Use this to capture any thoughts, quirks, insights, etc. that pop up during the process.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>