iou-app/objects/Declarative_Automation__c/fields/Original_Logic__c.field-meta.xml
<CustomField>
    <fullName>Original_Logic__c</fullName>
    <description>The logic in its original form after being excavated.</description>
    <label>Original Logic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>