iou-app/objects/Declarative_Automation__c/fields/Triggering_Object__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Object__c</fullName>
    <description>The sObject upon which this automation is built.</description>
    <label>Triggering Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>